# xboy

./: .gitignore  CMakeLists.txt  Makefile  README.md
bus/: CMakeLists.txt  bus.c
cart/: CMakeLists.txt  cart.c
cartridge/: CMakeLists.txt  cart.c
cpu/: CMakeLists.txt  Makefile  arithlogic16.c  arithlogic8.c  bit.c  branch.c  cpu-internal.h  cpu.c  load.c  load16.c  load8.c  misc.c  stack.c
include/: bus.h  cart.h  cpu.h  insts.h  mem.h  rom.h  utils.h  xboy.h
init/: main.c
insts/: CMakeLists.txt  Makefile  instructions.c  instructions.h  load.c  misc.c
lib/: logger.c
ppu/: CMakeLists.txt  ppu-internal.h  ppu.c  render.c
rom/: Makefile  rom.c
scripts/: Makefile.build
utils/: CMakeLists.txt  logger.c
